FSPA-365 fix checkboboxes component style

--- a/src/app/shared/components/bd-checkboxes/bd-checkboxes.component.scss
+++ b/src/app/shared/components/bd-checkboxes/bd-checkboxes.component.scss
@@ -31,7 +31,8 @@
 
   .checkboxes {
     display: flex;
-    padding: 11px 0;
+    padding-top: calc(#{$default-margin} - 6px);
+    padding-bottom: calc(#{$default-margin} - 6px);
     flex-flow: row wrap;
 
     .bd-checkbox {
