--- a/src/app/loads/components/load-view-mode-card/load-view-mode-card.component.scss
+++ b/src/app/loads/components/load-view-mode-card/load-view-mode-card.component.scss
@@ -1,24 +1,27 @@
 @import '../../../../assets/styles/variables';
 @import '../../../../assets/styles/font-icons';
 
-.load-view-mode-section {
+.stop-view-mode-section {
   display: flex;
   border: $border;
-  background: $white;
+  background: $light-blue;
   font-size: $tiny-font-size;
   flex-direction: column;
   border-left: 4px solid $pickup-view-mode-color;
   border-radius: $default-border-radius;
 
-
   .stop-info-container {
     display: flex;
+    background: $white;
+    border-bottom: $border;
+
 
     .facility-info {
       display: flex;
       width: 50%;
       padding: $default-margin;
       color: $dark-grey;
+      border-right: 1px dashed $grey;
       flex-direction: column;
       justify-content: space-between;
 
@@ -38,6 +41,30 @@
           line-height: $tiny-font-size;
         }
       }
+    }
+    .business-hours-container {
+      width: 50%;
+      padding: $default-margin;
+      color: $dark-grey;
+
+      .hours-string {
+        display: flex;
+        justify-content: space-between;
+      }
+
+      .btn-container {
+        position: absolute;
+        top: $default-margin;
+        right: $default-margin;
+        display: none;
+        padding: 0 5px;
+        background: $white;
+        color: $blue;
+
+        &:hover {
+          cursor: pointer;
+        }
+      }
 
       .notes {
         overflow: hidden;
@@ -45,22 +72,86 @@
         white-space: nowrap;
         text-overflow: ellipsis;
       }
-    }
 
-    .date-time-info {
+      &:hover {
+        .btn-container {
+          display: block;
+        }
+      }
+    }
+  }
+  .trip-info-container {
+    display: flex;
+    border: $border;
+    margin: 10px;
+    border-radius: $default-border-radius;
+    background: $white;
+    flex-direction: row;
+
+    .left-panel {
+      display: flex;
       width: 50%;
       padding: $default-margin;
-      border-left: 1px dashed $grey;
+      flex-direction: column;
 
-      .appointment-type {
+      .trip-info-header {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
 
+        .trip-number {
+          color: $black;
+        }
+
+        .buttons-panel {
+          display: inline;
+          color: $dark-grey;
+
+          button {
+            border: 0;
+            background: transparent;
+            &:focus {
+              outline: 0;
+            }
+          }
+        }
+      }
+      .driver-info {
+        display: flex;
+        align-items: center;
+
+        .initials-circle {
+          display: inline-block;
+          margin-right: 5px;
+        }
+
+        .driver-name {
+
+        }
+
+        .driver-count {
+
+        }
+      }
+
+      .trailer-info {
+        overflow: hidden;
+        color: $dark-grey;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+      }
+    }
+    .right-panel {
+      width: 50%;
+      padding: $default-margin;
+      border-left: $border;
+      .appointment-type {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
         .type-container {
           display: flex;
           align-items: center;
-
           .circle {
             display: inline-block;
             width: 12px;
@@ -69,79 +160,15 @@
             border-radius: 50%;
             margin-right: 5px;
           }
-
           .type {
             line-height: $tiny-font-size;
           }
         }
-
-        .btn-container {
-          color: $blue;
-
-          .text {
-            color: transparent;
-          }
-
-          &:hover {
-            cursor: pointer;
-
-            .text {
-              color: $blue;
-              transition: color .2s;
-            }
-          }
-        }
       }
-
       .date-range-container {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-      }
-
-      .business-hours-container {
-        color: $dark-grey;
-
-        .hours-string {
-          display: flex;
-          justify-content: space-between;
-        }
-      }
-    }
-  }
-
-  .trip-info-container {
-    display: flex;
-    padding: $default-margin;
-    border-top: $border;
-    flex-direction: row;
-    justify-content: space-between;
-
-    .info-panel {
-      display: flex;
-      align-items: center;
-
-      .trip-number {
-        color: $black;
-      }
-
-      .initials-circle {
-        display: inline-block;
-        margin: 0 5px;
-      }
-    }
-
-    .buttons-panel {
-      display: inline;
-      color: $dark-grey;
-
-      button {
-        border: 0;
-        background: transparent;
-
-        &:focus {
-          outline: 0;
-        }
       }
     }
   }
