--- a/src/app/equipment/components/equipment-card/equipment-card.component.html
+++ b/src/app/equipment/components/equipment-card/equipment-card.component.html
@@ -8,29 +8,29 @@ class="card-section"
       [firstName]="firstLetter"
       [lastName]="lastLetter">
     </bd-initials-circle>
-    <div class="equipment-make ellipsis">
-      {{equipment.make}}
+    <div class="item-make ellipsis">
+      {{item.make}}
     </div>
-    <div>{{equipment.number}}</div>
+    <div>{{item.number}}</div>
   </div>
   <div class="middle">
-    <span class="driver-name">{{equipment.driverFirstName}} {{equipment.driverLastName}}</span>
-    <span class="driver-type ellipsis">{{driverType}}</span>
-  <div class="changes ellipsis">{{this.equipment.equipmentNotification?.date | date:'MM/dd'}}</div>
+    <span class="driver-name">{{item.driverFirstName}} {{item.driverLastName}}</span>
+    <span class="driver-type ellipsis">{{equipmentTypeText}}</span>
+  <div class="changes ellipsis">{{this.item.itemNotification?.date | date:'MM/dd'}}</div>
   </div>
   <div class="right">
       <div class="tr-city">
         <span style="background: rgb(133, 209, 131)" class="tr-city-circle"></span>
-        <span class="tr-city-name">TR{{equipment.lastTripNumber}}</span>
+        <span class="tr-city-name">TR{{item.lastTripNumber}}</span>
       </div>
       <div class="tr-city">
         <span style="background: red" class="tr-city-circle"></span>
-        <span class="tr-city-name">{{equipment.lastAddress}}</span>
+        <span class="tr-city-name">{{item.lastAddress}}</span>
   </div>
   </div>
-  <span *ngIf="statusText" [style.color]="equipmentStatusColor" class="status-text">{{equipmentStatusText}}</span>
+  <span *ngIf="statusText" [style.color]="itemStatusColor()" class="status-text">{{itemStatusText()}}</span>
   <span
-  [style.background]="equipmentStatusColor"
+  [style.background]="itemStatusColor()"
   class="status">
   </span>
 </div>
