FSPA-378 #comment code refactoring

--- a/src/app/companies/components/company-card/company-card.component.html
+++ b/src/app/companies/components/company-card/company-card.component.html
@@ -4,7 +4,7 @@ class="card-section"
 (mouseleave)="onLeave()"
 (click)="onClick()">
   <div class="left">
-    <span class="cropped-item-name">{{this.croppeditemName}}</span>
+    <span class="cropped-company-name">{{this.croppedCompanyName}}</span>
     <div class="item-name ellipsis">
       {{item.name}}
     </div>
