FSPA-378 #comment code refactoring, fixed test issues

--- a/src/app/drivers/components/driver-card/driver-card.component.html
+++ b/src/app/drivers/components/driver-card/driver-card.component.html
@@ -11,13 +11,13 @@ class="card-section"
         [lastName]="item.lastName">
       </bd-initials-circle>
     </div>
-    <div class="item-full-name ellipsis">
+    <div class="driver-full-name ellipsis">
       {{item.firstName}} {{item.lastName}}
     </div>
-    <div class="item-type">{{driverTypeText}}</div>
+    <div class="driver-type">{{driverTypeText}}</div>
   </div>
   <div class="middle">
-    <span class="item-phone ellipsis">{{item.primaryPhone}}</span>
+    <span class="driver-phone ellipsis">{{item.primaryPhone}}</span>
     <span class="send-message ellipsis">Send Message</span>
   </div>
   <div class="right">
