--- a/src/app/equipment/components/equipment-card/equipment-card.component.html
+++ b/src/app/equipment/components/equipment-card/equipment-card.component.html
@@ -8,7 +8,7 @@ class="card-section"
       [firstName]="firstLetter"
       [lastName]="lastLetter">
     </bd-initials-circle>
-    <div class="item-make ellipsis">
+    <div class="equipment-make ellipsis">
       {{item.make}}
     </div>
     <div>{{item.number}}</div>
