--- a/src/app/companies/components/company-card/company-card.component.html
+++ b/src/app/companies/components/company-card/company-card.component.html
@@ -5,15 +5,15 @@ class="card-section"
 (click)="onClick()">
   <div class="left">
     <span class="cropped-company-name">{{this.croppedCompanyName}}</span>
-    <div class="item-name ellipsis">
+    <div class="company-name ellipsis">
       {{item.name}}
     </div>
-    <div class="item-mc">MC# {{item.mc}}</div>
+    <div class="company-mc">MC# {{item.mc}}</div>
   </div>
   <div class="middle">
-    <span class="item-contact-full-name">{{item.contacts[0].firstName}} {{item.contacts[0].lastName}}</span>
+    <span class="company-contact-full-name">{{item.contacts[0].firstName}} {{item.contacts[0].lastName}}</span>
     <span class="position ellipsis">{{item.contacts[0].position}}</span>
-  <div class="item-address-phone ellipsis">{{item.addresses[0].phone}}</div>
+  <div class="company-address-phone ellipsis">{{item.addresses[0].phone}}</div>
   </div>
   <div class="right">
     <div *ngFor="let load of item.loads" class="load">
