--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -65,7 +65,7 @@ $base-font-size: 16px;
 
 $default-font-size: 1rem;
 $mini-font-size: .625rem; // 10px
-$tiny-font-size: .75rem;
+$tiny-font-size: .75rem;  // 12px
 $small-font-size: .875rem; // 14px
 $large-font-size: 1.25rem;
 $extra-large-font-size: 2rem;
