FSPA-367 #comment added disabled functionality to bd-input, bd-button

--- a/src/app/shared/components/bd-buttons/bd-button/bd-button.component.html
+++ b/src/app/shared/components/bd-buttons/bd-button/bd-button.component.html
@@ -1,6 +1,8 @@
 <button
 [disabled]="disabled"
 [type]="type"
-class="common {{color}}">
+class="common {{color}}"
+[class.bd-disabled]="disabled"
+>
 {{text}}
 </button>
