FSPA-367 add save.update to show spinner

--- a/src/app/companies/components/company-detail.component.html
+++ b/src/app/companies/components/company-detail.component.html
@@ -5,6 +5,7 @@
     [anchors]="anchors">
   </form-navigation>
   <company-form
+    [isLoading]="isLoading"
     [scrollable]="true"
     [company]="selectedItem"
     [viewMode]="viewMode"
