--- a/src/app/drivers/components/driver-detail.component.html
+++ b/src/app/drivers/components/driver-detail.component.html
@@ -5,6 +5,7 @@
     [anchors]="anchors">
   </form-navigation>
   <driver-form
+    [isLoading]="isLoading"
     [scrollable]="true"
     [driver]="selectedItem"
     [viewMode]="viewMode"
