--- a/src/app/loads/components/load-detail/load-detail.component.html
+++ b/src/app/loads/components/load-detail/load-detail.component.html
@@ -1,4 +1,10 @@
 <div *ngIf="selectedItem">
   <form-navigation [title]="'Load'" [anchors]="anchors" sticky></form-navigation>
-  <load-form (save)="onItemSave($event)" (cancel)="onItemCancel($event)" [load]="selectedItem" [viewMode]="viewMode"></load-form>
+  <load-form
+    [isLoading]="isLoading"
+    (save)="onItemSave($event)"
+    (cancel)="onItemCancel($event)"
+    [load]="selectedItem"
+    [viewMode]="viewMode">
+  </load-form>
 </div>
