--- a/src/app/shared/components/bd-button-switch/bd-button-switch.component.html
+++ b/src/app/shared/components/bd-button-switch/bd-button-switch.component.html
@@ -1,4 +1,4 @@
-<div class="bd-switch-container">
+<div class="bd-switch-container" [class.bd-disabled]="disabled">
   <div class="bd-switch-label" *ngIf="!hideLabel">
     {{labelText}}
   </div>
