--- a/src/app/shared/components/bd-button-switch/bd-button-switch.component.scss
+++ b/src/app/shared/components/bd-button-switch/bd-button-switch.component.scss
@@ -49,3 +49,15 @@
     }
   }
 }
+
+.bd-disabled {
+  .bd-switch-label {
+    color: $disabled-text-color;
+  }
+
+  .bd-buttons-container {
+    button {
+      color: $disabled-text-color;
+    }
+  }
+}
