--- a/src/app/shared/components/bd-checkbox/bd-checkbox.component.html
+++ b/src/app/shared/components/bd-checkbox/bd-checkbox.component.html
@@ -1,3 +1,5 @@
-<div [class.checked]="checked" class="checkbox-container">
+<div
+[class.checked]="checked"
+class="checkbox-container">
   <div class="arrow"></div>
 </div>
