--- a/src/app/shared/components/bd-checkboxes/bd-checkboxes.component.scss
+++ b/src/app/shared/components/bd-checkboxes/bd-checkboxes.component.scss
@@ -50,3 +50,14 @@
     }
   }
 }
+
+.bd-disabled {
+
+  .bd-label {
+    color: $disabled-text-color;
+  }
+
+  .checkboxes {
+    color: $disabled-text-color;
+  }
+}
