--- a/src/app/shared/components/bd-form-switch/bd-form-switch.component.html
+++ b/src/app/shared/components/bd-form-switch/bd-form-switch.component.html
@@ -3,6 +3,7 @@
       *ngSwitchCase="true"
       class="bd-form-control"
       [labelText]="labelText"
+      [disabled]="disabled"
       [hideLabel]="hideLabel"
       [items]="items"
       [selectedValue]="selectedValue"
