--- a/src/app/forms/company-form/company-form.component.html
+++ b/src/app/forms/company-form/company-form.component.html
@@ -7,7 +7,7 @@
 			</bd-input>
 			<bd-dropdown class="bd-form-control" [labelText]="'Company type'" formControlName="type" [items]="companyTypes">
 			</bd-dropdown>
-			<bd-form-switch class="bd-form-control" [labelText]="'Status'" [disabled]="true" [enableButtonSwitch]="isEditMode" formControlName="status" [items]="companyStatuses">
+			<bd-form-switch class="bd-form-control" [labelText]="'Status'" [enableButtonSwitch]="isEditMode" formControlName="status" [items]="companyStatuses">
 			</bd-form-switch>
 			<bd-validator [component]="companyForm.controls.mc" [errorDefs]="{required: 'MC# is required'}">
 				<bd-input class="bd-form-control" [labelText]="'MC #'" formControlName="mc">
