FSPA-384 #comment code refactoring

--- a/src/app/shared/components/bd-button-switch/bd-button-switch.component.scss
+++ b/src/app/shared/components/bd-button-switch/bd-button-switch.component.scss
@@ -52,12 +52,13 @@
 
 .bd-disabled {
   .bd-switch-label {
-    color: $disabled-text-color;
+    opacity: $disabled-opacity;
   }
 
   .bd-buttons-container {
     button {
-      color: $disabled-text-color;
+      color: $label-default-color;
+      opacity: $disabled-opacity;
     }
   }
 }
