--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -47,6 +47,7 @@ $btn-secondary-background: $light-grey;
 $btn-secondary-color: $black;
 
 $disabled-text-color: $grey;
+$disabled-opacity: .5;
 
 /* placeholder */
 $placeholder-color: $dark-grey;
