--- a/src/app/shared/components/bd-checkboxes/bd-checkboxes.component.html
+++ b/src/app/shared/components/bd-checkboxes/bd-checkboxes.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="checkboxes">
     <div class="bd-checkbox" *ngFor="let item of items">
-      <bd-checkbox [checked]="isChecked(item)" [disabled]="true" (checkedChange)="onCheckedChange(item)"></bd-checkbox>
+      <bd-checkbox [checked]="isChecked(item)" [disabled]="disabled" (checkedChange)="onCheckedChange(item)"></bd-checkbox>
       {{item.key}}
     </div>
   </div>
